Final project - Davide Basso

--- a/MyFinalProject_2020_2021.ipynb
+++ b/MyFinalProject_2020_2021.ipynb
@@ -248,9 +248,10 @@
         "import matplotlib.pyplot as plt\n",
         "import scipy \n",
         "from scipy.interpolate import lagrange\n",
-        "from scipy.misc import derivative"
+        "from scipy.misc import derivative\n",
+        "from timeit import default_timer as timer "
       ],
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -992,6 +993,139 @@
         "4. (optional) matrix free, numba+jit on GPU (measure time 100 applications of matvec(v))\n",
         "\n",
         "Comment on your findings."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZfhhQi7i1yXf"
+      },
+      "source": [
+        "def compute_three_dimensional_matrices(n) :\n",
+        "    assert n > 0\n",
+        "\n",
+        "    B, K, M, A = compute_one_dimensional_matrices(n)\n",
+        "\n",
+        "    KMM = einsum('il, jm, kn -> ijklmn', K,M,M)\n",
+        "    MKM = einsum('il, jm, kn -> ijklmn', M,K,M)\n",
+        "    MMK = einsum('il, jm, kn -> ijklmn', M,M,K)\n",
+        "    MMM = einsum('il, jm, kn -> ijklmn', M,M,M)\n",
+        "\n",
+        "    AAA = KMM + MKM + MMK + MMM\n",
+        "    AAA = AAA.reshape((n**3,n**3))\n",
+        "\n",
+        "    return AAA"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oMKUae0T10FU"
+      },
+      "source": [
+        "def simple_matvec3(vinput) :\n",
+        "    return AAA.dot(vinput)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b_DRjTj11z39"
+      },
+      "source": [
+        "def matvec3(vinput) :\n",
+        "    v = vinput.reshape((n,n,n))\n",
+        " \n",
+        "    Mv = M.dot(v) \n",
+        "    Kv = K.dot(v)\n",
+        "\n",
+        "    MMv = M.dot(Mv) \n",
+        "    KMv = K.dot(Mv) \n",
+        "    MKv = M.dot(Kv)\n",
+        " \n",
+        "    u = K.dot(MMv)\n",
+        "    u += M.dot(KMv) \n",
+        "    u += M.dot(MKv)\n",
+        "    u += M.dot(MMv)\n",
+        "    return u.reshape((n**3,))"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m9yRuZhW141J"
+      },
+      "source": [
+        "n = 20\n",
+        "a = np.random.rand(n**3)\n",
+        "B, K, M, A = compute_one_dimensional_matrices(n)\n",
+        "AAA = compute_three_dimensional_matrices(n)"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p8j5LhbD179Q",
+        "outputId": "fb54a1bc-302d-4202-de6d-f7f6e4e33d29"
+      },
+      "source": [
+        "final = 0\n",
+        "for i in range(0,100):\n",
+        "    start = timer()\n",
+        "    simple_matvec3(a)\n",
+        "    final += timer()-start\n",
+        "\n",
+        "print('Timing of 100 iterations of matrix based solver for 3D problems:',final)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Timing of 100 iterations of matrix based solver for 3D problems: 3.9671804130020973\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vywuPqxC1zeF",
+        "outputId": "f4d9e646-b56f-46c4-ca1d-00e3e5d602e4"
+      },
+      "source": [
+        "final = 0\n",
+        "for i in range(0,100):\n",
+        "    start = timer()\n",
+        "    matvec3(a)\n",
+        "    final += timer()-start\n",
+        "\n",
+        "print('Timing of 100 iterations of matrix free solver for 3D problems:',final)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Timing of 100 iterations of matrix free solver for 3D problems: 0.23485998999876756\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
